@@ -1,18 +1,18 @@
-variable "bucket_name" {}
+provider "aws" {
+  alias = "acm"  
+  version = "3.24"
+  profile = "challenge_profile"
+  region  = "${var.region}"
+}
 
 variable "acl_value" {
     default = "private"
 }
 
-variable "aws_access_key" {
-    default = “<your_access_key>”
-}
-
-variable "aws_secret_key" {
-    default = “<your_secret_key>”
- }
-
 variable "region" {
-    default = "region"
+    default = "us-east-2"
 }
 
+variable "bucket_name" {
+  default = "steven-challenge"
+}
